Format resources JSON as Ember expects too
